<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.bartowski.easteregg.MainActivity">

    <RadioGroup
        android:padding="10dp"
        android:id="@+id/egg_choose_rg"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:textSize="22sp"
            android:text="@string/nekoland"
            android:checked="false"
            android:id="@+id/egg_nekoland_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:textSize="22sp"
            android:text="@string/mland"
            android:checked="false"
            android:id="@+id/egg_mland_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:textSize="22sp"
            android:text="@string/lland"
            android:checked="true"
            android:id="@+id/egg_lland_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:textSize="22sp"
            android:text="@string/dessertcase"
            android:checked="false"
            android:id="@+id/egg_dessertcase_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:textSize="22sp"
            android:text="@string/beanbag"
            android:checked="false"
            android:id="@+id/egg_beanbag_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:textSize="22sp"
            android:text="@string/nyandroid"
            android:checked="false"
            android:id="@+id/egg_nyandroid_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:textSize="22sp"
            android:text="@string/zombie"
            android:checked="false"
            android:id="@+id/egg_zombie_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:textSize="22sp"
            android:text="@string/honeybee"
            android:checked="false"
            android:id="@+id/egg_honeybee_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <Button
        android:id="@+id/egg_open_button"
        android:onClick="openEasterEgg"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/nickname_et"
        android:maxLength="6"
        android:text="宝宝很生气"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/check_version_button"
        android:onClick="checkVersion"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/check_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/main_logo"
        android:onClick="openDebug"
        android:src="@drawable/jandycane"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
